client/src/index.css
html, body {
  height: 100%;
  background-color: #282923;
  color: #dddddd;

  font: 14px "Century Gothic", Futura, sans-serif;
  margin: 0;
}

/* display defining the SPA-style menu, navbar, and lower-right work area */
.parent {
  display: flex;
  flex-direction: column;

  height: 100%;
}
.menubar {
  background-color: #222222;
  padding: 7px;
}
.bottom {
  display: flex;
  flex-direction: row;
  flex-grow: 1;
}
.sideNav {
  background-color: #222222;
}
.sideNav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
.sideNav ul li {
  padding: 3px;
}
.clientArea {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  flex-grow: 1;
  padding: 4px;
}
.lightUIPadding {
  padding: 4px;
}
.heavyUIPadding {
  padding: 6px;
}
.vertFill {
  height: 100%;
}
.centerText {
  text-align: center;
}

hr {
  border: 1px solid #888888;
  margin: 0px;
}
a {
  -webkit-transition-duration: 0.4s;
  transition-duration: 0.4s;
}
a:link {
  color: #555599;
}
a:visited {
  color: #777799;
}
a:hover {
  color: #888899;
  background-color: #444444;
}
a:active {
  color: #9999bb; 
}

.title {
  font: 50px "Century Gothic", Futura, sans-serif;
}
.titleParent {
  background-color: #222222;
  padding: 30px;
}

/* GameBoard */
.board {
  display: flex;
  flex-direction: column;

  margin: 3px;
}
.boardrow {
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.tile {
}
.draggable {
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 1px 0px;

  -webkit-transition: transform 0.5s, box-shadow 0.5s;
  transition: transform 0.5s, box-shadow 0.5s;
}
.draggableInMotion {
  box-shadow: rgba(0, 0, 0, 0.3) 5px 5px 5px 0px;
  z-index: 10;
}
.palette {
  display: flex;
  flex-direction: row;
  
  width: 100%;
}

/* Voting */
.voteButton {
  border: none;
  text-align: center;
  background-color: #ffffff00;

  margin: 4px;
  padding: 5px;
  cursor: pointer;
  outline: none;

  -webkit-transition-duration: 0.4s;
  transition-duration: 0.4s;
}
.voteButton:hover {
  background-color: #ffffff44;
}
.voteButton:active {
  background-color: #ffffffaa;
  transform: translateY(4px);
}

/* MyGames */
.gamesParent {
  display: flex;
  flex-flow: row wrap;
}
.myGamesEntry {
  background-color: #ffffff00;

  border: none;
  margin: 1px;
  padding: 1px;

  -webkit-transition-duration: 0.4s;
  transition-duration: 0.4s;
}
.myGamesEntry:hover {
  background-color: #ffffff44;
}
.myGamesEntry:active {
  background-color: #ffffffaa;
  transform: translateY(4px);
}

/* Leaderboard */
.leaderboardParent {
  display: flex;
  flex-flow: row wrap;
}
.leaderboardEntry {
  border: 1px solid #ffffff77;
  margin: 1px;
  padding: 1px;
}

